--- a/s3-static-website/s3-website/error.html
+++ b/s3-static-website/s3-website/error.html
@@ -1,1 +1,23 @@
-This is error file
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Page Not Found</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <h1>Oops! Page Not Found</h1>
+  </header>
+
+  <main>
+    <p>The page you are looking for does not exist.</p>
+    <a href="index.html">Go back to Home</a>
+  </main>
+
+  <footer>
+    <p>© 2025 Your Name</p>
+  </footer>
+</body>
+</html>
