--- a/s3-static-website/s3-website/index.html
+++ b/s3-static-website/s3-website/index.html
@@ -1,1 +1,22 @@
-This is index file
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Welcome to My Static Website</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <h1>Welcome to My Static Website</h1>
+  </header>
+
+  <main>
+    <p>This is a sample homepage hosted on AWS S3.</p>
+  </main>
+
+  <footer>
+    <p>© 2025 Your Name</p>
+  </footer>
+</body>
+</html>
